--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,10 @@ h1 {
 .logo-container {
   width: 20em;
 }
+
+@media (max-width: 800px) {
+  .card,
+  .header {
+    flex-direction: column;
+  }
+}
